@@ -126,4 +126,10 @@
     margin: theme('spacing.8') auto 0;
     width: theme('spacing.8');
   }
+
+  @media (forced-colors: $media-forced-colours) and (prefers-color-scheme: dark) {
+    .login-logo-img {
+      filter: invert(100%);
+    }
+  }
 }
