@@ -59,7 +59,7 @@
 
         {% block branding_logo %}
             <div class="login-logo">
-                <img src="{% versioned_static 'wagtailadmin/images/wagtail-logo.svg' %}" alt=""/>
+                <img class="login-logo-img" alt="" src="{% versioned_static 'wagtailadmin/images/wagtail-logo.svg' %}" />
             </div>
         {% endblock %}
     </main>
