@@ -15,6 +15,7 @@ Changelog
  * Fix: references extraction for ChooserBlock (Alex Tomkins)
  * Fix: Incorrectly formatted link in the documentation for Wagtail community support (Bolarinwa Comfort Ajayi)
  * Fix: Text within status tags text will now resize correctly when customizing browser font size (Mary Ojo)
+ * Fix: Ensure logo shows correctly on log in page in Windows high-contrast mode (Loveth Omokaro)
 
 
 4.1 LTS (xx.xx.xxxx) - IN DEVELOPMENT
